* Sat Oct 02 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Bug fix: update pReg after registry intialization in
    TestDB.c::test_CU_add_test().
    
* Sun Sep 26 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Bug fixes found in internal unit testing.
  - Update Linux build files.
  - Add Visual Studio 2003/VC7 solution & project files.

* Sun Sep 19 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Changed test message handlers to pass test and suite (not
    just their names).  This is for future use.
  - Clarified behavior of CU_translate_special_characters() when
    szDest is too small to hold converted string (found in testing!).
  - Split out suite and test creation into distinct functions
    create_suite() & create_test() in TestDB.c.
  - Moved CU_get_suite_by_name() & CU_get_test_by_name() to TestDB.
  - Removed need for registry to be initialized for CU_run_suite() and
    CU_run_test() in TestRun.c (registry no longer holds result info,
    so this dependence is no longer needed).
  - Provided functions to turn on & off memory allocation in MyMem.c
    for use in internal testing.
  - Initial implementation of internal CUnit testing.
  - Implement modified registration system (based on Cheung/Aurema code).

* Wed Sep 01 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Implemented setjmp/longjmp mechanism for aborting test runs.
  - Add assertion to CU_assertImplementation() to trap calls
    outside a registered test function during a test run.
  - Added CU_PASS and CU_FAIL to assertions in CUnit.h.

* Sat Aug 28 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Html documentation implemented.
  - Jamfile and Makefile.am included for html doc installation.

* Sat Aug 21 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - initial implementation of jds-v2-expt experimental version
    containing the following changes.

  Wed 18-Aug-2004 Jerry St.Clair <jds2@users.sourceforge.net>